--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,6 @@ script: bash -ex .travis-ci.sh
 sudo: required
 env:
   - OCAML_VERSION=4.01.0 OPAM_VERSION=1.0.0
+
+notifications:
+  slack: plt-team:A1rrtCtC0R1xQ8BCEqO2dEEN
